# Final_Task_EPAM

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci-cd.yml
app/: README.md  config.py  database.py  dependencies.py  main.py
app/controllers/: authentication.py  document_controller.py  project_controller.py  user_controller.py
app/crud/: aws_crud.py  document_crud.py  project_crud.py  user_crud.py  user_project_crud.py
app/models/: document_model.py  project_model.py  user_model.py  user_project_model.py
app/routers/: document_route.py  project_route.py  user_route.py
app/schemas/: document_schema.py  project_schema.py  user_project_schema.py  user_schema.py
app/services/: aws_setup.py
app/sql/: squema.py
deployments/: ecs-task-definition.json
tests/: conftest.py  dummies.py  test_authentication.py  test_document.py  test_project.py  test_users.py
